--- a/app/home/profile.html
+++ b/app/home/profile.html
@@ -32,7 +32,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="main-login main-center">
+                    <div id="mainProfile">
                         <label for="name" class="cols-sm-2 control-label">Welcome Back  {{vm.account.name}}!</label>
                         <form class="form-horizontal" name="signupForm" ng-submit='vm.updateProfile()'>
                             <div class="form-group">
