--- a/app/home/profile.html
+++ b/app/home/profile.html
@@ -5,7 +5,7 @@
                 <div class="panel-heading">
                     Profile ... 
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="height: 100%" >
                     <div class="row text-center">
                         <div class="modal fade" id="profileModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="document">
