--- a/app/home/profile.html
+++ b/app/home/profile.html
@@ -80,8 +80,8 @@
                                 <div class="cols-sm-10">
                                     <div class="input-group">
                                         <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                                        <input type="text" class="form-control" name="password" id="password"  placeholder="Enter your Password" ng-model='vm.account.password' minlength="8" ng-show="vm.editMode" required />
-                                        <input type="text" class="form-control" name="password"   placeholder="Enter your Password" ng-model='vm.account.password' readonly minlength="8" ng-show="!vm.editMode" required />                                    
+                                        <input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password" ng-model='vm.account.password' minlength="8" ng-show="vm.editMode" required />
+                                        <input type="password" class="form-control" name="password"   placeholder="Enter your Password" ng-model='vm.account.password' readonly minlength="8" ng-show="!vm.editMode" required />                                    
                                     </div>
                                 </div>
                             </div>
@@ -90,8 +90,8 @@
                                 <div class="cols-sm-10">
                                     <div class="input-group">
                                         <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                                        <input type="text" class="form-control" name="confirm"   placeholder="Confirm your Password" ng-model='vm.account.password2' minlength="8" ng-show="vm.editMode" required/>
-                                        <input type="text" class="form-control" name="confirm" id="confirm"  placeholder="Confirm your Password" ng-model='vm.account.password2' readonly minlength="8" ng-show="!vm.editMode" required/>
+                                        <input type="password" class="form-control" name="confirm"   placeholder="Confirm your Password" ng-model='vm.account.password2' minlength="8" ng-show="vm.editMode" required/>
+                                        <input type="password" class="form-control" name="confirm" id="confirm"  placeholder="Confirm your Password" ng-model='vm.account.password2' readonly minlength="8" ng-show="!vm.editMode" required/>
                                     </div>
                                 </div>
                             </div>
