--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
         <META HTTP-EQUIV="Expires" CONTENT="-1">
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Smaerway, Inc.">
+        <meta name="description" content="Smartway, Inc.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Smartway</title>
