--- a/app/index.html
+++ b/app/index.html
@@ -64,12 +64,16 @@
         <!-- Our Website Javascripts -->
         <script src="app.js"></script>
         <script src="app.run.js"></script>
+        <script src="routeFile.js"></script>
 
         <!-- Controllers -->
 
         <script src="home/homeController.js"></script>
         <script src="login/loginController.js"></script>
 
+        <!-- Fillter -->
+
+        <script src="fillter/round.js"></script>
 
         <!-- services -->
         <script src="services/authService.js"></script>
