--- a/app/home/profile.html
+++ b/app/home/profile.html
@@ -60,8 +60,8 @@
                                 <div class="cols-sm-10">
                                     <div class="input-group">
                                         <span class="input-group-addon"><i class="fa fa-user-o" aria-hidden="true"></i></span>
-                                        <input type="email" class="form-control" name="username"   placeholder="Enter your Username" ng-model='vm.account.username' ng-show="vm.editMode" required/>
-                                        <input type="email" class="form-control" name="username" id="username"  placeholder="Enter your Username" ng-model='vm.account.username' readonly ng-show="!vm.editMode" required/>                                    
+                                        <input type="text" class="form-control" name="username"   placeholder="Enter your Username" ng-model='vm.account.username' ng-show="vm.editMode" required/>
+                                        <input type="text" class="form-control" name="username" id="username"  placeholder="Enter your Username" ng-model='vm.account.username' readonly ng-show="!vm.editMode" required/>                                    
                                     </div>
                                 </div>
                             </div>
