--- a/app/login/Signup.html
+++ b/app/login/Signup.html
@@ -26,7 +26,7 @@
 			<div class="cols-sm-10">
 				<div class="input-group">
 					<span class="input-group-addon"><i class="fa fa-user-o" aria-hidden="true"></i></span>
-					<input type="email" class="form-control" name="username" id="username"  placeholder="Enter your Username" ng-model='vm.user.username' required/>
+					<input type="text" class="form-control" name="username" id="username"  placeholder="Enter your Username" ng-model='vm.user.username' required/>
 				</div>
 			</div>
 		</div>
